# embedbase

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  config.example.yaml  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.postgres.yml  docker-compose.qdrant.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  alembic.ini  constants.py  db.py  dependencies.py  main.py  middleware.py  port_utils.py  requirements-ml.txt  requirements.txt  settings.py
api/adapters/: base.py
api/alembic/: env.py  script.py.mako
api/models/: chunk.py  collection.py  config.py  document.py  indexing.py  redis.py  search.py  tagging.py
api/routers/: collections.py  config.py  documents.py  graph.py  health.py  indexing.py  mcp.py  search.py  tags.py  workspaces.py  ws.py
api/schemas/: collections.py  graph.py  tags.py  workspaces.py
api/services/: auth.py  bm25.py  collections.py  config_env.py  config_reload.py  config_service.py  documents.py  graph.py  health.py  indexing.py  ingestion.py  logs.py  realtime.py  search.py  tag_bridge.py  tag_suggest.py  tags.py  tasks.py  upload.py  workspaces.py
api/tables/: __init__.py  api_keys.py  collections.py  documents.py  job_records.py  tags.py  workspaces.py
docs/: openapi.yaml  retrieval-upgrade-plan.md
docs/plans/: s3-minio-storage.md
scripts/: check_ports.py  ci-local.ps1  ci-local.sh  export_openapi.py  up.ps1  up.sh
tests/: conftest.py
tests/integration/: test_api_keys.py  test_collections.py  test_config.py  test_documents.py  test_documents_flat.py  test_graph.py  test_health.py  test_ingestion.py  test_mcp.py  test_search.py  test_search_e2e.py  test_stub_routes.py  test_tag_suggest.py  test_tags.py  test_workspaces.py  test_ws.py
tests/smoke/: test_smoke.py
tests/unit/: fake_redis.py  test_auth.py  test_bm25.py  test_chroma_adapter.py  test_chunkers.py  test_collections_svc.py  test_config.py  test_config_env.py  (+38 more)
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
worker/: Dockerfile  Dockerfile.gpu  celery_app.py  config.py  config_reload.py  db.py  requirements-ml.txt  requirements.txt  tasks.py
(+96 files in other folders)
