[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "embedbase"
version = "1.0.0"
description = "Local-first document embedding system with REST and MCP APIs"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    # Upper bound: FastAPI minors can change Starlette routing internals (0.137 +
    # Starlette 1.3 nests included routers). Bump deliberately and re-test.
    "fastapi>=0.136.0,<0.138.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "bcrypt>=4.1.0",
    "PyYAML>=6.0.1",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.3",
    "PyMuPDF>=1.24.0",
    "chardet>=5.2.0",
    "mistune>=3.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "pandas>=2.2.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
pgvector = ["asyncpg>=0.29.0", "pgvector>=0.2.5"]
qdrant = ["qdrant-client>=1.9.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends() in default args is an intentional pattern, not a bug
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Strict mode requires return annotations on every function; added progressively per delivery
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
